# action-test

./: 222.txt  Dockerfile  action.docker.yml  action.yml  call_api.js  client.js  client_tcp.py  compile_commands.json  entrypoint.sh  hihi.txt  package-lock.json  package.json  test.sh  test.txt  tsconfig.json
.github/scripts/: pr-comment-bot.ts  prompt.txt
.github/workflows/: changed_files.yml  comment.yml  main.yml  pr_comment_bot.yml  prompt.txt
c++/: CMakeLists.txt  client_tcp.py  compile_commands.json  main.cpp
c++/.cache/clangd/index/: main.cpp.C47FD0E107CF3975.idx
hello_rust/: client.js  client_tcp.py  output.txt  server.js
hello_rust/src/: main.rs
scripts/: pr-comment-bot.js
src/: main.ts  prompt.txt
tests/: cart.test.js  fortest.txt  print.py  test_calculator.py  test_utils.py  test_weather.py
